# piano-codeocean

./: .gitignore  Dockerfile  README.md  __main__.py  pyproject.toml  requirements.txt  requirements_lite.txt  requirements_rapids.txt  run_piano_integration.py  setup.py
.codeocean/: datasets.json  environment.json  resources.json
code/: requirements_lite.txt  run  run_piano_integration.ipynb
environment/: Dockerfile  postInstall
metadata/: metadata.yml
piano/: __main__.py
