[project]
name = "piano-integration"
version = "0.0.0"
description = "PIANO: Probabilistic Inference Autoencoder Networks for multi-Omics"
readme = "README.md"
requires-python = ">=3.10.18"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-misc",
    "anndata",
    "scanpy",
    "torch<2.8",
]
authors = [
    {name = "Ning Wang", email = "nw8333@princeton.edu"}
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
classifiers = [
  "Programming Language :: Python",
  "Operating System :: OS Independent"
]
[project.optional-dependencies]
rapids = [
    "jax[cuda12]",
    "rapids-singlecell[rapids12]"
]
scvi-tools = [
    "scvi-tools",
    "scib-metrics==0.5.3"
]
torch = [
    "torchvision",
    "torchaudio",
]
misc = [
    "igraph",
    "leidenalg",
    "matplotlib",
    "seaborn",
    "joblib",
    "jupyterlab",
    "pot"
]
all = ["piano-integration[rapids,scvi-tools,torch,misc]"]
